k8s/dev/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dev
  namespace: founders-dev
spec:
  selector:
    matchLabels:
      app: auth-dev
  replicas: 1
  template:
    metadata:
      labels:
         app: auth-dev
    spec:
      imagePullSecrets:
         - name: ghcr-secret
      containers:
         - name: auth-dev
           image: ghcr.io/tesostesis/auth-dev:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-dev
  namespace: founders-dev
spec:
  selector:
    app: auth-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: auth-dev
   namespace: founders-dev
   annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
   ingressClassName: public
   rules:
   - host: founders.dynaco.co
     http:
       paths:
       - path: /api/auth
         pathType: Prefix
         backend:
           service:
             name: auth-dev
             port:
               number: 8080
